--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,12 +1,13 @@
-<div class="container-fluid border container m-5 position-relative">
+<div class="container-fluid border container m-5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <ng-container>
             <li class="nav-item border">
-              <a class="nav-link active"
-                aria-current="page" >Contact <i class="fa fa-trash"></i></a>
+              <a class="nav-link active" aria-current="page"
+                >Contact <i class="fa fa-trash"></i
+              ></a>
             </li>
           </ng-container>
         </ul>
@@ -14,5 +15,37 @@
       <button class="btn btn-primary ml-auto">+Add Contact</button>
     </div>
   </nav>
+  <form [formGroup]="contactForm">
+    <div class="container w-50 mx-0">
+      <div class="row">
+        <div class="col">
+          <label for class="form-label"
+            >First Name<span class="text-danger">*</span></label
+          >
+          <input
+            type="text"
+            class="form-control"
+            formControlName="first_name"
+          />
+        </div>
+        <div class="col">
+          <label for class="form-label">Last Name</label>
+          <input type="text" class="form-control" formControlName="last_name" />
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col">
+          <label for class="form-label"
+            >Email<span class="text-danger">*</span></label
+          >
+          <input type="text" class="form-control" formControlName="email" />
+        </div>
+        <div class="col">
+          <label for class="form-label">Phone</label>
+          <input type="text" class="form-control" formControlName="phone" />
+        </div>
+      </div>
+    </div>
+    <div></div>
+  </form>
 </div>
-
