feat(contact-form): add select contact function login

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -3,16 +3,19 @@
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <ng-container>
-            <li class="nav-item border">
-              <a class="nav-link active" aria-current="page"
-                >Contact <i class="fa fa-trash"></i
-              ></a>
-            </li>
-          </ng-container>
+          @for(contact of contactIds; track contact; let i = $index) {
+            <ng-container>
+              <li class="nav-item border">
+                <a class="nav-link active"
+                  [ngClass]="{'active-contact': selectedContact === i}"
+                  aria-current="page" (click)="onClickSelectContact(i)">Contact
+                  {{i+1}} <i class="fa fa-trash" ></i></a>
+              </li>
+            </ng-container>
+            }
         </ul>
       </div>
-      <button class="btn btn-primary ml-auto">+Add Contact</button>
+      <button class="btn btn-primary ml-auto" (click)="onClickAddContact()">+Add Contact</button>
     </div>
   </nav>
   <form [formGroup]="contactForm">
