style(contact-form): change style

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -53,6 +53,6 @@
     <div></div>
   </form>
 </div>
-<div class="float-end save-btn">
-  <button class="btn mx-5" (click)="onClickSave()">Save</button>
+<div class="float-end ">
+  <button class="btn mx-5 save-btn" (click)="onClickSave()">Save</button>
 </div>
