--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col">
           <label for class="form-label">Phone</label>
-          <input type="text" class="form-control" formControlName="phone" />
+          <input type="text" class="form-control" formControlName="phone" mask="(000) 000-0000"/>
         </div>
       </div>
     </div>
