feat(contact-form): add if condition or deleting contact

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,35 +1,38 @@
 <div class="container-fluid border container m-5">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          @for(contact of contactIds; track contact; let i = $index) {
-            <ng-container>
-              <li class="nav-item border">
-                <a class="nav-link active"
-                  [ngClass]="{'active-contact': selectedContact === i}"
-                  aria-current="page" (click)="onClickSelectContact(i)">Contact
-                  {{i+1}} <i class="fa fa-trash" (click)="onClickDelete(i)" ></i></a>
-              </li>
-            </ng-container>
-            }
-        </ul>
-      <button class="btn ml-auto" (click)="onClickAddContact()">+Add Contact</button>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        @for(contact of contactIds; track contact; let i = $index) {
+        <ng-container>
+          <li class="nav-item border">
+            <a class="nav-link active"
+              [ngClass]="{'active-contact': selectedContact === i}"
+              aria-current="page" (click)="onClickSelectContact(i)">Contact
+              {{i+1}}
+              @if(contactIds.length>1) {
+              <i class="fa fa-trash" (click)="onClickDelete(i)"></i>
+              }
+            </a>
+          </li>
+        </ng-container>
+        }
+      </ul>
+      <button class="btn ml-auto" (click)="onClickAddContact()">+Add
+        Contact</button>
     </div>
   </nav>
   <form [formGroup]="contactForm">
     <div class="container w-50 mx-0 p-3">
       <div class="row">
         <div class="col">
-          <label for class="form-label"
-            >First Name<span class="text-danger">*</span></label
-          >
+          <label for class="form-label">First Name<span
+              class="text-danger">*</span></label>
           <input
             type="text"
             class="form-control"
-            formControlName="first_name"
-            
-          />
-          <app-common-validation-error [control]="contactForm.get('first_name')" [key]="'First Name'"></app-common-validation-error>  
+            formControlName="first_name" />
+          <app-common-validation-error [control]="contactForm.get('first_name')"
+            [key]="'First Name'"></app-common-validation-error>
         </div>
         <div class="col">
           <label for class="form-label">Last Name</label>
@@ -38,15 +41,16 @@
       </div>
       <div class="row mt-3">
         <div class="col">
-          <label for class="form-label"
-            >Email<span class="text-danger">*</span></label
-          >
+          <label for class="form-label">Email<span
+              class="text-danger">*</span></label>
           <input type="text" class="form-control" formControlName="email" />
-          <app-common-validation-error [control]="contactForm.get('email')" [key]="'Email'"></app-common-validation-error>
+          <app-common-validation-error [control]="contactForm.get('email')"
+            [key]="'Email'"></app-common-validation-error>
         </div>
         <div class="col">
           <label for class="form-label">Phone</label>
-          <input type="text" class="form-control" formControlName="phone" mask="(000) 000-0000"/>
+          <input type="text" class="form-control" formControlName="phone"
+            mask="(000) 000-0000" />
         </div>
       </div>
     </div>
