--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -53,7 +53,8 @@
     </div>
     <div></div>
   </form>
-</div>
-<div class="float-end ">
-  <button class="btn mx-5 save-btn" (click)="onClickSave()">Save</button>
+
+  <div class="d-flex justify-content-end">
+    <button class="btn" (click)="onClickSave()">Save</button>
+  </div>
 </div>
