refactor(contact-form): change logic

--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -6,6 +6,7 @@
 .active-contact {
   background-color: rgb(204, 202, 202); 
   font-weight: bold; 
+  cursor: pointer;
 }
 .btn {
   background-color: darkblue;
